# ennel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: parser.h  tokens.h
samples/: func.nl  var.nl
src/: ennel.c  parser.c  tokens.c  tokens.h
